<resources>
    <string name="app_name" translatable="false">宝宝追书</string>
    <string name="book_read_mode_day" translatable="false">夜间</string>
    <string name="menu_main_night_mode" translatable="false">夜间模式</string>
    <string name="menu_main_login" translatable="false">登录</string>
    <string name="community_discuss" translatable="false">综合讨论区</string>
    <string name="community_comment" translatable="false">书评区</string>
    <string name="community_helper" translatable="false">书荒互助区</string>
    <string name="community_girl" translatable="false">女生区</string>
    <string name="sort_default" translatable="false">默认排序</string>
    <string name="sort_created" translatable="false">最新发布</string>
    <string name="sort_comment_count" translatable="false">最多评论</string>
    <string name="sort_helpful" translatable="false">最有用的</string>
    <string name="distillate_false" translatable="false">全部</string>
    <string name="distillate_true" translatable="false">精品</string>
    <string name="find_ranking" translatable="false">排行榜</string>
    <string name="find_topic" translatable="false">主题书单</string>
    <string name="all_topic" translatable="false">全部书单</string>
    <string name="male_topic" translatable="false">男生书单</string>
    <string name="female_topic" translatable="false">女生书单</string>
    <string name="find_category" translatable="false">分类</string>
    <string name="third_website" translatable="false">第三方小说网</string>
    <string name="rank_other" translatable="false">别人家的排行榜</string>
    <string name="net_book_author" translatable="false">%1$s&#160;|&#160;%2$s</string>
    <string name="net_book_save_count" translatable="false">%1$d&#160;人在追&#160;|&#160;%2$s%%读者留存</string>
    <string name="book_list_count" translatable="false">共%1$d本书&#160;&#160;|&#160;&#160;%2$d人收藏</string>
    <string name="search" translatable="false">搜索</string>
    <string name="search_history" translatable="false">搜索历史</string>
    <string name="search_clear_history" translatable="false">清空</string>
    <string name="search_hot_search" translatable="false">大家都在搜</string>
    <string name="search_change_a_lot" translatable="false">换一批</string>
    <string name="search_result_h2" translatable="false">%1$d人在追&#160;&#160;|&#160;&#160;%2$s%%读者留存&#160;&#160;|&#160;&#160;%3$s著</string>
    <string name="book_detail" translatable="false">书籍详情</string>
    <string name="book_detail_cat" translatable="false">&#160;&#160;|&#160;&#160;%1$s&#160;&#160;|&#160;&#160;</string>
    <string name="book_detail_review_author" translatable="false">%1$s&#160;&#160;lv.%2$d</string>
    <string name="book_detail_remove_collection" translatable="false">不追了</string>
    <string name="book_detail_join_collection" translatable="false">追更新</string>
    <string name="book_detail_retention_ratio" translatable="false">%1$s%%</string>
    <string name="book_detail_hot_reviews" translatable="false">热门书评</string>
    <string name="book_detail_community" translatable="false">%1$s的社区</string>
    <string name="book_detail_post_count" translatable="false">共有&#160;%1$d&#160;个帖子</string>
    <string name="book_detail_recommend_book_list" translatable="false">你可能感兴趣</string>
    <string name="book_detail_is_joined_the_book_shelf" translatable="false">是否将《%1$s》加入书架</string>
    <string name="book_detail_has_joined_the_book_shelf" translatable="false">已添加《%1$s》</string>
    <string name="book_detail_has_remove_the_book_shelf" translatable="false">已移除《%1$s》</string>
    <string name="detail_start_read" translatable="false">开始阅读</string>
    <string name="detail_follower_count" translatable="false">追书人数</string>
    <string name="detail_retention_ratio" translatable="false">读者留存率</string>
    <string name="detail_day_word_count" translatable="false">日更新字数</string>
    <string name="detail_no_intro" translatable="false">暂无简介</string>
    <string name="read_change_mode" translatable="false">更换模式</string>
    <string name="read_book_detail" translatable="false">书籍简介</string>
    <string name="book_read_community" translatable="false">社区</string>
    <string name="book_read_change_source" translatable="false">换源</string>
    <string name="book_read_introduce" translatable="false">简介</string>
    <string name="book_read_mode_day_manual_setting" translatable="false">日间</string>
    <string name="book_read_mode_night_manual_setting" translatable="false">夜间</string>
    <string name="book_read_landscape" translatable="false">横屏</string>
    <string name="book_read_portrait" translatable="false">竖屏</string>
    <string name="book_read_feedback" translatable="false">反馈</string>
    <string name="book_read_download" translatable="false">缓存</string>
    <string name="read_settings_brightness_hint" translatable="false">跟随系统</string>
    <string name="read_settings_auto_read" translatable="false">自动阅读</string>
    <string name="read_settings_more" translatable="false">更多设置</string>
    <string name="read_settings" translatable="false">阅读设置</string>
    <string name="book_read_mark" translatable="false">书签</string>
    <string name="book_read_toc" translatable="false">目录</string>
    <string name="add_bookmark" translatable="false">新增书签</string>
    <string name="manage_bookmark" translatable="false">管理</string>
    <string name="clear_bookmark" translatable="false">清除</string>
    <string name="book_read_download_error_net" translatable="false">网络异常，缓存失败</string>
    <string name="book_read_download_error_topic" translatable="false">目录获取异常，缓存失败</string>
    <string name="book_read_download_complete" translatable="false">缓存完成:%1$s</string>
    <string name="book_read_download_complete2" translatable="false">缓存完成:%1$s(失败%2$d章)</string>
    <string name="book_read_download_progress" translatable="false">正在缓存:%1$s(%2$d/%3$d)&#8230;</string>
    <string name="book_read_download_start" translatable="false">准备缓存:%1$s&#8230;</string>
    <string name="net_error" translatable="false">网络异常</string>
    <string name="book_read_add_book_title" translatable="false">添书</string>
    <string name="book_read_add_book_msg" translatable="false">是否将本书加入书架？</string>
    <string name="book_read_join" translatable="false">加入书架</string>
    <string name="book_read_remove" translatable="false">移出书架</string>
    <string name="book_read_not_add" translatable="false">不了</string>
    <string name="book_read_local" translatable="false">本地阅读</string>
    <string name="support_local_read" translatable="false">已解析</string>
    <string name="book_read_end_hint" translatable="false">千万要记得对那些「肯掏钱买书的人」说声谢谢，因为没有他们，也就没有新书可以看了。</string>
    <string name="book_read_end_hint_author" translatable="false">——东野圭吾</string>
    <string name="other_source" translatable="false">其他来源</string>
    <string name="relate_book" translatable="false">相似书籍</string>
    <string name="book_discussion" translatable="false">社区话题</string>
    <string name="category_book_msg" translatable="false">%1$d人在追&#160;&#160;|&#160;&#160;%2$s%%读者留存</string>
    <string name="subject_book_msg" translatable="false">共%1$d本书&#160;&#160;|&#160;&#160;%2$d人收藏</string>
    <string name="create_book_list" translatable="false">创建书单</string>
    <string name="user_book_list" translatable="false">我的书单</string>
    <string name="book_list_detail" translatable="false">书单详情</string>
    <string name="book_list_share" translatable="false">分享书单</string>
    <string name="book_list_detail_by" translatable="false">创建自</string>
    <string name="book_list_word_count" translatable="false"><Data><![CDATA[<font color="#b93221" translatable="false"><b>%1$d<br/></b></font>人在追&#160;&#160;|&#160;&#160;<font color="#b93221" translatable="false"><b>%2$d<br/></b></font>万字]]></Data></string>
    <string name="comment_floor" translatable="false">%1$d楼</string>
    <string name="comment_like_count" translatable="false">%1$d次同感</string>
    <string name="comment_best_comment" translatable="false">仰望神评论</string>
    <string name="comment_comment_count" translatable="false">共%1$d条评论</string>
    <string name="comment_reply_to" translatable="false">回复&#160;&#160;%1$s(%2$d楼)</string>
    <string name="comment_reply" translatable="false">回复</string>
    <string name="comment_add" translatable="false">添加评论</string>
    <string name="posts_agreed" translatable="false">同感</string>
    <string name="discussion_hot" translatable="false">热门</string>
    <string name="vote_count" translatable="false">共%1$d人投票</string>
    <string name="post_review_name_type" translatable="false">%1$s&#160;&#160;&#160;[%2$s]</string>
    <string name="book_review_helpful_yes" translatable="false">有用</string>
    <string name="book_review_helpful_no" translatable="false">无用</string>
    <string name="book_review_the_scoring" translatable="false">给书评打分</string>
    <string name="book_review_detail_score" translatable="false">楼主打分:</string>
    <string name="settings" translatable="false">设置</string>
    <string name="bookshelf_sort" translatable="false">书架排序</string>
    <string name="bookshelf_sort_dialog" translatable="false">书架排序方式</string>
    <string name="bookshelf_sort_add" translatable="false">按最近添加</string>
    <string name="bookshelf_sort_update" translatable="false">按更新时间</string>
    <string name="bookshelf_sort_read" translatable="false">按最近阅读</string>
    <string name="download_read_book" translatable="false">边看边存</string>
    <string name="download_read_book_none" translatable="false">未开启</string>
    <string name="download_read_book_1" translatable="false">自动缓存当前章节</string>
    <string name="download_read_book_5" translatable="false">自动缓存后面五章</string>
    <string name="download_read_book_10" translatable="false">自动缓存后面十章</string>
    <string name="saving_traffic_mode" translatable="false">省流量模式（无图模式）</string>
    <string name="clear_cache" translatable="false">清除缓存</string>
    <string name="clear_cache_dialog_title" translatable="false">确定清除缓存？</string>
    <string name="clear_cache_dialog_message" translatable="false">清除缓存会将已缓存的书籍全部删除，是否清除？</string>
    <string name="read_volume_turn_page" translatable="false">音量键翻页</string>
    <string name="all_click_next_page" translatable="false">全屏点击翻下页</string>
    <string name="full_screen_mode" translatable="false">全屏模式</string>
    <string name="exit_tips" translatable="false">再按一次退出程序</string>
    <string name="delete" translatable="false">删除</string>
    <string name="delete_count" translatable="false">删除(%1$d)</string>
    <string name="remove_selected_book" translatable="false">移除所选书籍</string>
    <string name="delete_local_cache" translatable="false">同时删除本地缓存</string>
    <string name="confirm" translatable="false">确定</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="cancel_selected_all" translatable="false">取消全选</string>
    <string name="select_all" translatable="false">全选</string>
    <string name="has_not_selected_delete_book" translatable="false">你没有选择要删的书哦</string>
    <string name="add_the_book_you_like" translatable="false">添加你喜欢的小说</string>
    <string name="network_error_tips" translatable="false">加载失败，请检查网络或稍后再试</string>
    <string name="cancle_top" translatable="false">取消置顶</string>
    <string name="more" translatable="false">更多</string>
    <string name="loading_more" translatable="false">加载中&#8230;</string>
    <string name="load_no_more" translatable="false">(*￣ω￣) 没有更多了</string>
    <string name="load_more_fail" translatable="false">(*￣ω￣) 加载失败</string>
    <string name="baidu_source" translatable="false">百度搜索其他来源</string>
    <string name="baidu_source_hint" translatable="false">百度</string>
    <string name="zhuishu_source_hint" translatable="false">追书的书源</string>
    <string name="read_time" translatable="false">总阅读时长</string>
    <string name="sleep_time" translatable="false">连续阅读1小时封印时长</string>
    <string name="zzb_warning_title" translatable="false">来自古天宝的特级警告！！</string>
    <string name="zzb_warning_msg" translatable="false">渣渣宝，由于你连续阅读书籍时长超过1小时，此界面已被封印！</string>
    <string name="i_know" translatable="false">知道了</string>
</resources>