<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/common_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <com.xzhou.book.widget.SettingItemView
                android:id="@+id/book_sort_view"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/bookshelf_sort"
                app:valueText="@string/bookshelf_sort_add"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <com.xzhou.book.widget.SettingItemView
                android:id="@+id/book_read_dl_view"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/download_read_book"
                app:valueText="@string/download_read_book_none"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <com.xzhou.book.widget.SettingItemView
                android:id="@+id/clear_cache_view"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/clear_cache"
                app:valueText="0B"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/saving_traffic_cb"
                style="@style/SettingItemSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saving_traffic_mode"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <com.xzhou.book.widget.SettingItemView
                android:id="@+id/read_time_view"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:arrowVisibility="invisible"
                app:titleText="@string/read_time"
                app:valueText="1小时"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <com.xzhou.book.widget.SettingItemView
                android:id="@+id/sleep_time_view"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/sleep_time"
                app:valueText="1小时"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <com.xzhou.book.widget.SettingItemView
                android:id="@+id/crash_view"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="Crash日志记录"
                app:valueText="0次"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>