<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/common_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SettingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_settings"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/volume_turn_page_sw"
                style="@style/SettingItemSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_volume_turn_page"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/next_page_sw"
                style="@style/SettingItemSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_click_next_page"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_divider_narrow"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/full_screen_mode_sw"
                style="@style/SettingItemSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_screen_mode"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>