<?xml version="1.0" encoding="utf-8"?>
<com.xzhou.book.read.ReadSlideView
    android:id="@+id/end_ll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/read_slide_bg"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/bg_read_end_divider"
        android:layerType="software"
        android:orientation="horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/book_read_end_hint"
        android:textColor="@color/slide_text_color_dark"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:gravity="end"
        android:text="@string/book_read_end_hint_author"
        android:textColor="@color/slide_text_color_dark"
        android:textSize="13sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/other_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:text="@string/other_source"
            android:textColor="@color/slide_text_color_dark"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/more_source_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/more"
            android:textColor="@color/slide_text_color"
            android:textSize="13sp"
            tools:ignore="RelativeOverlap"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/source_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/divider_view"
            android:layout_below="@id/other_tv"
            android:layout_marginTop="10dp"/>

        <View
            android:id="@+id/divider_view"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_above="@id/discussion_item_tv"
            android:layout_marginBottom="8dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/discussion_item_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/recommend_item_tv"
            android:background="@drawable/dark_touch_bg"
            android:drawablePadding="20dp"
            android:drawableStart="@mipmap/ic_read_menu_topic"
            android:paddingBottom="15dp"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            android:paddingTop="15dp"
            android:text="@string/book_discussion"
            android:textColor="@color/slide_text_color"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/recommend_item_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/dark_touch_bg"
            android:drawablePadding="20dp"
            android:drawableStart="@mipmap/ic_read_menu_relate_book"
            android:paddingBottom="15dp"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            android:paddingTop="15dp"
            android:text="@string/relate_book"
            android:textColor="@color/slide_text_color"
            android:textSize="13sp"/>
    </RelativeLayout>

</com.xzhou.book.read.ReadSlideView>