<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp">

    <LinearLayout
        android:id="@+id/load_more_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/loading_more"
            android:textColor="@color/common_h2"
            android:textSize="14sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/load_more_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/load_more_fail"
        android:textColor="@color/common_h2"
        android:textSize="14sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/load_no_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/load_no_more"
        android:textColor="@color/common_h2"
        android:textSize="14sp"
        android:visibility="gone"/>
</FrameLayout>